// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestComponent should render with maximum props 1`] = `
<label
  className="container uui-checkbox-container root size-18 mode-cell uui-color-primary -clickable"
>
  <div
    className="uui-checkbox"
  >
    <input
      aria-checked={false}
      checked={false}
      onChange={[Function]}
      tabIndex={0}
      type="checkbox"
    />
  </div>
</label>
`;

exports[`TestComponent should render with minimum props 1`] = `
<label
  className="container uui-checkbox-container root size-18 mode-form uui-color-primary -clickable"
>
  <div
    className="uui-checkbox uui-checked"
  >
    <input
      aria-checked={true}
      checked={true}
      onChange={[Function]}
      tabIndex={0}
      type="checkbox"
    />
    <div
      className="container uui-icon uui-enabled"
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
  </div>
</label>
`;
